--- a/maietta.tex
+++ b/maietta.tex
@@ -25,17 +25,18 @@
 
 \usepackage[latin1]{inputenc}
 \usepackage{titlesec}
-\usepackage{lipsum}
+\usepackage{lipsum} % I don't know what is this ;)
 \input{commands.tex}
 \usepackage{dirtytalk}
 \usepackage{amsmath}
 \usepackage{fancyvrb}
-\usepackage{graphicx}
-\usepackage{pdfoverlay,textpos}
+\usepackage{graphicx} 
+\usepackage{pdfoverlay,textpos} % this for  the images
 
 
-\usepackage{listings}
-\usepackage{xcolor}
+
+\usepackage{listings} %for code snippets
+\usepackage{xcolor}   % for code snippets
 
 %New colors defined below
 \definecolor{codegreen}{rgb}{0,0.6,0}
@@ -81,9 +82,13 @@
 \newacronym{False Positive}{FP}{False Positive}
 \newacronym{True Negative}{TN}{True Negative}
 \newacronym{False Negative}{FN}{False Negative}
+\newacronym{Precision}{P}{Precision}
+\newacronym{Recall}{R}{Recall}
+\newacronym{Accuracy}{A}{Accuracy}
 \newacronym{Pubblica Amministrazione}{PA}{Pubblica Amministrazione}
 \newacronym{Codice Identificativo di Gara}{CIG}{Codice Identificativo di Gara}
 \newacronym{Codice Unico di Progetto}{CUP}{Codice Unico di Progetto}
+\newacronym{societa-soa}{SOA}{Società Organismi di Attestazione}
 \input{soa-acronyms.tex}
 
 
