--- a/capitoli/chapter2.tex
+++ b/capitoli/chapter2.tex
@@ -11,7 +11,7 @@
 
 
 
-%\section{Casi d'uso delle attestazioni SOA}
+\chapter{Casi d'uso delle attestazioni SOA}
 Finora sono state descritte le attestazioni SOA ed è stato chiarito il ruolo fondamentale che queste certificazioni ricoprono negli appalti.
 D'ora in avanti si intende descrivere l'uso di queste attestazioni da parte dei vari attori del mondo degli appalti:
 \begin{enumerate}
@@ -33,39 +33,12 @@ Dato un insieme di documenti in formato testuale appartenenti al dominio delle g
 \section{Impostazione del problema}
 %\subsection{Insiemi di valori}
 L'impostazione del problema inizia con la definizione degli insiemi di valori possibili;
-nel caso delle attestazioni SOA, seguendo la tassonomia esposta definiamo l'insieme delle Categorie e l'insieme delle Classifiche:
+nel caso delle attestazioni SOA, seguendo la tassonomia esposta definiamo l'insieme delle Categorie e l'insieme delle Classifiche\ldots linear:
 \begin{center}
-Categorie = \{\say{OG-1} , \say{OG-2}, \say{OG-3}, \say{OG-4},
- \say{OG-5},\say{OG-6},\say{OG-7},\say{OG-8},
+\textbf{Categorie} = \{\say{OG-1},\say{OG-2}, \ldots ,  \say{OG-13},
+ \say{OS-1},\say{OS-2},, \ldots ,  \say{OS-35} \}
 \end{center}
-%\begin{center} \end{center} for each line to be displayed
-\begin{center}
- \say{OG-9},\say{OG-10},\say{OG-11},\say{OG-12},
- \say{OG-13}, \say{OS-1},\say{OS-2A},\say{OS-2B},
- \say{OS-3},
-\end{center}
-\begin{center}
- \say{OS-4},\say{OS-5},\say{OS-6},
- \say{OS-7},\say{OS-8},\say{OS-9},\say{OS-10},
- \say{OS-11},\say{OS-12A},
-\end{center}
-\begin{center}
- \say{OS-12B}, \say{OS-13},
- \say{OS-14},\say{OS-15},\say{OS-16},\say{OS-17},
- \say{OS-18A},\say{OS-18B},
-\end{center}
-\begin{center}
- \say{OS-19},
- \say{OS-20A},
- \say{OS-20B},\say{OS-21},\say{OS-22},\say{OS-24},
- \say{OS-25}, \say{OS-26}, 
-\end{center}
-\begin{center}
- \say{OS-27}, \say{OS-28},
- \say{OS-29}, \say{OS-30}, \say{OS-31}, \say{OS-32},
- \say{OS-33}, \say{OS-34}, 
- \say{OS-35} \}
-\end{center}
+
 %\parbox{\textwidth}{
 %Categorie = \{\say{OG-1} , \say{OG-2}, \say{OG-3}, \say{OG-4},
 % \say{OG-5},\say{OG-6},\say{OG-7},\say{OG-8},\\
@@ -88,7 +61,7 @@ Categorie = \{\say{OG-1} , \say{OG-2}, \say{OG-3}, \say{OG-4},
 % \say{OS-35} \}
 % }
 \begin{center}
-Classifiche = \{\say{I}, \say{II}, \say{III}, \say{IV}, \say{IV-bis}, \say{V}, \say{VI}, \say{VII}, \say{VIII} \};
+\textbf{Classifiche} = \{\say{I}, \say{II}, \say{III}, \say{IV}, \say{IV-bis}, \say{V}, \say{VI}, \say{VII}, \say{VIII} \}
 \end{center}
 
 In definitiva, il sistema indicherà le informazioni estratte in base all'insieme Categorie e Classifiche così definiti. 
@@ -101,8 +74,7 @@ Più in generale, per ogni attestazione SOA che il sistema individuerà in un docu
     \item lo score, ossia il grado di accuratezza dell'output.
 \end{itemize}
 
-\paragraph{soa\_extracted\_tuple} = [  (start\_offset\_cat, end\_offset\_cat), (categoria, classifica), score)
-            ]
+\paragraph{soa\_extracted\_tuple} = [  (\textit{start\_offset\_cat}, \textit{end\_offset\_cat}), (\textit{cat}, \textit{class}), \textit{score})]
 
 \section{Valutazione dei dati estratti}
 Quando il sistema collega la stringa "o.g. 1" all'elemento OG-1, sta effettuando una classificazione: sta classificando un dato come appartenente alla classe delle istanze di OG-1.
@@ -127,7 +99,7 @@ Il sistema che stiamo considerando effettua un'estrazione di dati, classificando
 La \textbf{Ground Truth} è dunque l'output corretto che ci si aspetterebbe dal sistema; e come tale indicherà, per ogni porzione di documento, l'attestazione "giusta" che il sistema avrebbe dovuto estrarre.
 Un sistema di apprendimento dotato di Ground Truth appartiene all'approccio detto \textbf{Apprendimento Supervisionato}. 
 La ground truth verrà poi confrontata con l'output del sistema e permetterà di classificare ogni tupla dell'output come true positive, false positive, true negative, false negative.
-Una volta contrassegnata ogni tupla dell'output come tp/fp/tn/fn, sarà possibile calcolare Precision, Recall e Accuracy.
+Una volta contrassegnata ogni tupla dell'output come \acrshort{True Positive}, \acrshort{False Positive}, \acrshort{True Negative}, \acrshort{False Negative}, sarà possibile calcolare \acrfull{Precision}, \acrfull{Recall} e \acrfull{Accuracy}.
 
 
 \section{Tecniche di estrazione}
