--- a/capitoli/chapter1.tex
+++ b/capitoli/chapter1.tex
@@ -83,7 +83,7 @@ Le Categorie sono suddivise in due macro-categorie: opere generali e opere speci
 Le Classifiche d'importo, in numero di dieci, sono rese come numeri ordinali romani. 
 
 
-\subsection{Categorie di opere generali}
+\subsection{Categorie di opere generali}\label{CATEGORIE}
 \begin{itemize}
   \item \acrshort{OG-1}, \acrlong{OG-1}
   \item \acrshort{OG-2}, \acrlong{OG-2}
@@ -126,7 +126,7 @@ Le Classifiche d'importo, in numero di dieci, sono rese come numeri ordinali rom
   \item \acrshort{OS-19}, \acrlong{OS-19}
   \item \acrshort{OS-20-A}, \acrlong{OS-20-A}
   \item \acrshort{OS-20-B}, \acrlong{OS-20-B}
-  \item \item \acrshort{OS-21}, \acrlong{OS-21}
+  \item \acrshort{OS-21}, \acrlong{OS-21}
   \item \acrshort{OS-22}, \acrlong{OS-22}
   \item \acrshort{OS-23}, \acrlong{OS-23}
   \item \acrshort{OS-24}, \acrlong{OS-24}
@@ -143,7 +143,7 @@ Le Classifiche d'importo, in numero di dieci, sono rese come numeri ordinali rom
   \item \acrshort{OS-35}, \acrlong{OS-35}
 \end{itemize}
 
-\subsection{Classifiche importo }
+\subsection{Classifiche importo }\label{CLASSIFICHE}
 \begin{itemize}
   \item \acrshort{I}, \acrlong{I}
   \item \acrshort{II}, \acrlong{II}
