--- a/maietta.tex
+++ b/maietta.tex
@@ -189,7 +189,7 @@
 
 \begin{document}
 \ateneo{Politecnico di Torino}
-\titolo{Estrazione di dati della P.A.}% per la laurea quinquennale e il dottorato
+\titolo{Estrazione di entità da testi della Pubblica Amministrazione}% per la laurea quinquennale e il dottorato
 \corsodilaurea{Ingegneria Informatica}% per la laurea di primo e secondo livello
 \candidato{Davide \textsc{Maietta}}% per tutti i percorsi
 \relatore{prof.\ Maurizio Morisio}% per la laurea e il dottorato
